# gl_vk_meshlet_cadscene

./: CMakeLists.txt  README.md  bbox_shaders.cxx  bbox_shaders2.cxx  cadscene.cpp  cadscene.hpp  cadscene_vk.cpp  cadscene_vk.hpp  common.h  config.h  draw.frag.glsl  draw.vert.glsl  drawmeshlet.mesh.glsl  drawmeshlet.task.glsl  mesh_shaders.cxx  meshletbbox.geo.glsl  meshletbbox.vert.glsl  meshlettest.cpp  nvmeshlet_utils.glsl  raster_shaders.cxx  renderer.cpp  renderer.hpp  renderer_vk_mesh.cpp  resources.hpp  resources_vk.cpp  resources_vk.hpp  shaders.cxx  shaders.hxx  shaders_common.hxx  vk_initlib.cpp
